--- a/assets/www/css/style.css
+++ b/assets/www/css/style.css
@@ -1,5 +1,9 @@
-h1,h2,h3,h4,h5{
+.label{
 	color:#60A725;
 	font-family: 'Open Sans',sans-serif;
 	font-weight: 300
+}
+h6{
+	font-size : 11px;
+	font-family: 'Times New Roman',sans-serif;
 }
