--- a/assets/www/css/style.css
+++ b/assets/www/css/style.css
@@ -7,3 +7,117 @@ h6{
 	font-size : 11px;
 	font-family: 'Times New Roman',sans-serif;
 }
+
+#floatingBarsG{
+position:relative;
+width:62px;
+height:77px}
+
+.blockG{
+position:absolute;
+background-color:#FFFFFF;
+width:10px;
+height:24px;
+-webkit-border-radius:8px 8px 0 0;
+-webkit-transform:scale(0.4);
+-webkit-animation-name:fadeG;
+-webkit-animation-duration:0.48s;
+-webkit-animation-iteration-count:infinite;
+-webkit-animation-direction:linear;
+border-radius:8px 8px 0 0;
+transform:scale(0.4);
+animation-name:fadeG;
+animation-duration:0.48s;
+animation-iteration-count:infinite;
+animation-direction:linear;
+}
+
+#rotateG_01{
+left:0;
+top:28px;
+-webkit-animation-delay:0.18s;
+-webkit-transform:rotate(-90deg);
+animation-delay:0.18s;
+transform:rotate(-90deg);
+}
+
+#rotateG_02{
+left:8px;
+top:10px;
+-webkit-animation-delay:0.24s;
+-webkit-transform:rotate(-45deg);
+animation-delay:0.24s;
+transform:rotate(-45deg);
+}
+
+#rotateG_03{
+left:26px;
+top:3px;
+-webkit-animation-delay:0.3s;
+-webkit-transform:rotate(0deg);
+animation-delay:0.3s;
+transform:rotate(0deg);
+}
+
+#rotateG_04{
+right:8px;
+top:10px;
+-webkit-animation-delay:0.36s;
+-webkit-transform:rotate(45deg);
+animation-delay:0.36s;
+transform:rotate(45deg);
+}
+
+#rotateG_05{
+right:0;
+top:28px;
+-webkit-animation-delay:0.42000000000000004s;
+-webkit-transform:rotate(90deg);
+animation-delay:0.42000000000000004s;
+transform:rotate(90deg);
+}
+
+#rotateG_06{
+right:8px;
+bottom:7px;
+-webkit-animation-delay:0.48s;
+-webkit-transform:rotate(135deg);
+animation-delay:0.48s;
+transform:rotate(135deg);
+}
+
+#rotateG_07{
+bottom:0;
+left:26px;
+-webkit-animation-delay:0.5399999999999999s;
+-webkit-transform:rotate(180deg);
+animation-delay:0.5399999999999999s;
+transform:rotate(180deg);
+}
+
+#rotateG_08{
+left:8px;
+bottom:7px;
+-webkit-animation-delay:0.6s;
+-webkit-transform:rotate(-135deg);
+animation-delay:0.6s;
+transform:rotate(-135deg);
+}
+
+@-webkit-keyframes fadeG{
+0%{
+background-color:#000000}
+
+100%{
+background-color:#FFFFFF}
+
+}
+
+@keyframes fadeG{
+0%{
+background-color:#000000}
+
+100%{
+background-color:#FFFFFF}
+
+}
